Implement endpoints to create and list Projects
