# src/main/java/io/github/krloxz/fws/FwsApiController.java
@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import io.github.krloxz.fws.freelancer.application.FreelancersApiController;
+import io.github.krloxz.fws.project.application.ProjectsApiController;
 
 /**
  * Restful controller that exposes the resources that compose the Freelancer Web Services API.
@@ -26,7 +27,8 @@ public class FwsApiController {
   public CollectionModel<Object> listResources() {
     return CollectionModel.empty(
         affordanceLinkTo(methodOn(FwsApiController.class).listResources()).withSelfRel(),
-        affordanceLinkTo(methodOn(FreelancersApiController.class).list(null)).withRel("freelancers"));
+        affordanceLinkTo(methodOn(FreelancersApiController.class).list(null)).withRel("freelancers"),
+        affordanceLinkTo(methodOn(ProjectsApiController.class).projects(null)).withRel("projects"));
   }
 
 }
